# hillel_flask

./: .env  .gitignore  README.md  app.py  create_tables.sql  database.py  notes.py  pyproject.toml  run.py  settings.py  student.db
Hillel_homework_3-main/: .env  app.py  cli.py  create_tables.sql  pyproject.toml  settings.py
Hillel_homework_3-main/api/: routes.py  student.py
Hillel_homework_3-main/instance/: students.db
Hillel_homework_3-main/migrations/versions/: 80924a926e86_initial_migration.py
Hillel_homework_3-main/models/pydantic/students/: student_update.py
Hillel_homework_3-main/models/sqlalchemy/: student.py
Hillel_homework_3-main/templates/: home_page.html
Kseniia_Lytvina/: app.py
api/: routes.py  student.py
instance/: students.db
migrations/: README  alembic.ini  env.py  script.py.mako
migrations/versions/: 0c5af23f05f5_add_course_name_and_photo_url_to_student.py  5e5409b3feb1_add_course_name_and_photo_url_to_student.py  e1fcf6d13299_.py  ffd40bf1ff97_create_users_table.py
models/pydantic/students/: student_create.py  student_read.py  student_update.py
models/sqlalchemy/: student.py
src/flask_db_app/: __init__.py  models.py  routes.py  schemas.py
src/flask_db_app/templates/: students.html
templates/: home_page.html  search.html
