[project]
name = "flask-db-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh Honcharenko",email = "olehhnc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "flask_db_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
