[tool.poetry]
name = "PythonProject4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
sqlalchemy = "^2.0.40"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
pydantic-settings = "^2.9.1"
alchemy = "^20.5"


[tool.poetry.group.prod.dependencies]
psycopg = "^3.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
